Fix: Backend configuration and dependencies
Update backend code to align with application properties and resolve potential errors.